Fix a small layout issue

--- a/style/components/_requests.scss
+++ b/style/components/_requests.scss
@@ -22,10 +22,8 @@
 
     .complete-url {
       width: calc(100% - 165px);
+      white-space: nowrap;
 
-      .url {
-        white-space: nowrap;
-      }
       .fade-out {
         position: absolute;
         right: 0;
